--- a/BusHawk/gradle/wrapper/gradle-wrapper.properties
+++ b/BusHawk/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Oct 26 10:06:54 CDT 2015
+#Mon Jan 25 00:44:11 CST 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
