--- a/BusHawk/app/src/main/AndroidManifest.xml
+++ b/BusHawk/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -41,12 +41,15 @@
         <meta-data
             android:name="com.parse.CLIENT_KEY"
             android:value="oy9zgrMmeuIu1lIX3pkHGiRYU0GXpQoD6jBcFGg3" />
+
         <uses-permission android:name="android.permission.INTERNET" />
         <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
         <activity android:name=".StopView" >
         </activity>
         <activity android:name=".RouteView" >
@@ -59,6 +62,8 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.jjgould94.bushawk.MainActivity" />
+        </activity>
+        <activity android:name=".ListSelectionActivity" >
         </activity>
     </application>
 
